# marcoramos-me

./: .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: build.py  constants.py  css_minifier.py
tests/: test_build.py  test_css_minifier.py
